* SVN *

* don't sanitize custom anchor text for liquid filters [Jonathan Leighton]

* Fix nil authorization header bug.

* fix bug preventing plain html filter

* Fix akismet response issue

* 0.7.2 OFFICIAL *

* Allow safe fallback for bad Site#current_theme_path settings.

* Add another possible key to check for HTTP Basic Authentication

* Add shortcut to disable comments on an article from the comment moderation page.

* 0.7.1 PRE-RELEASE *

* add more robust tagging [Moritz Angermann]

* Fixed duplicate body bug in default Simpla theme when article has no excerpt

* Show excerpt by default on admin edit if the article has one

* big change to templates - store current site template in the Site db record.  Store templates in /themes/site-#{id}/*.  
  no more current/other/rollback bs.

* recognize swf files in themes

* When moderating comments, article title now links to edit action, magnifying glass links to article on site.

* Improve comment admin workflow by adding the comments awaiting moderation to to single moderation pages.

* Default theme is now Simpla (http://demo.ifelse.co.uk/index.php?wptheme=Simpla)

* Implement movable type xml-rpc API [Moritz Angermann]

* Enhance error recovery in the wordpress converter [Chris Petrilli]

* Fix Site#tags query to return distinct tags [DeLynn Berry]

* Simplify and properly test admin/article permissions for non-admins.

* Change child_section and descendent_section methods in the SiteDrop to search the preloaded sections array.

* Added global mode var to all templates to check what mode you're in: section, single, page, archive, search, tag

* Remove any notion of a template hierarchy, and the page template itself.  Paged sections now default to the 'single' template.

* Added {{ mode }} so you can check what 'view' you're in.  
  
  {% unless mode == 'single' %} Read more {% endunless %}
  
* Ensure templates are sorted by name [Brian Chapados]

* Fix bug that was caching redirected routes.  
